--- a/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
+++ b/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
@@ -10,9 +10,9 @@ S vývojem databázového serveru PostgreSQL začala University of California v~
 
 Řadí se mezi nejpokročilejší databázové systémy. Díky schopnosti pracovat s velkými objemy dat, své rychlosti a bohaté funkcionalitě může soupeřit i s populárními komerčními systémy jako jsou Oracle Database, MySQL a MS SQL Server \citep{PostgreSQL2012}.
 
-Samotné PostgreSQL neobsahuje datové typy ani funkce vhodné pro správu prostorových dat. K tomu je nutné přidat nadstavbu PostGIS, která implementuje specifikaci {\it Simple Features for SQL} konsorcia OGC a rozšiřuje tak databázový systém PostgreSQL o~podporu geografických dat. PostGIS umožňuje ukládání geometrických objektů (bod, linie, polygon), použití prostorových funkcí pro určení vzdálenosti, délky linií, výměru a obvodu ploch a výběr prostorových indexů.
+Samotné PostgreSQL neobsahuje datové typy ani funkce vhodné pro správu prostorových dat. K tomu je nutné přidat nadstavbu PostGIS, která implementuje specifikaci {\it Simple Features for SQL} konsorcia OGC a rozšiřuje tak databázový systém PostgreSQL o~podporu geografických dat. PostGIS umožňuje ukládání geo\-me\-tric\-kých objektů (bod, linie, polygon), použití prostorových funkcí pro určení vzdálenosti, délky linií, výměru a obvodu ploch a výběr prostorových indexů.
 
-PostGIS umožňuje práci s rozšířenými XML formáty GML, KML, GeoJSON~a SVG, jejichž funkce pro získání geometrie jsou:
+PostGIS umožňuje práci s rozšířenými XML formáty GML, KML, GeoJSON a~SVG, jejichž funkce pro získání geometrie jsou:
 \begin{itemize}
 \item \texttt{ST\_AsGML(geometry)},
 \item \texttt{ST\_AsKML(geometry)},
@@ -20,15 +20,13 @@ PostGIS umožňuje práci s rozšířenými XML formáty GML, KML, GeoJSON~a SVG
 \item \texttt{ST\_AsSVG(geometry)}.
 \end{itemize}
 
-PostGIS používá dva základní prostorové datové typy {\it geography} a {\it geometry}. Typ geography ukládá polohu v kartézských rovinných souřadnicích, kterým odpovídá souřadnicový systém WGS84. Je vhodný zejména pro malá území, protože při výpočtu vzdálenosti dvou bodů uložených v tomto datovém typu, funkce vrátí jako výsledek nejkratší vzdálenost v kilometrech v rovině. Typ geometry data ukládá v polárním rovinném systému a umožňuje nastavit souřadnicový systém dle potřeb. Výsledkem dotazu na vzdálenost dvou bodů bude úhel ve stupních, který po přepočtu do metrické soustavy určí nejkratší vzdálenost na povrchu kouli. Při výběru datového typu může být rozhodující například velikost daného území, nebo počet funkcí, jichž pro typ geometry poskytuje PostGIS mnohem více než pro typ geography \citep{OpenGeo2012}.
+PostGIS používá dva základní prostorové datové typy {\it geography} a {\it geometry}. Typ geography ukládá polohu v kartézských rovinných souřadnicích, kterým odpovídá souřadnicový systém WGS84. Je vhodný zejména pro malá území, protože při výpočtu vzdálenosti dvou bodů uložených v tomto datovém typu, funkce vrátí jako výsledek nejkratší vzdálenost v kilometrech v rovině. Typ geometry data ukládá v polárním rovinném systému a umožňuje nastavit souřadnicový systém dle potřeb. Výsledkem dotazu na vzdálenost dvou bodů bude úhel ve stupních, který po přepočtu do metrické soustavy určí nejkratší vzdálenost na povrchu koule. Při výběru datového typu může být tedy rozhodující velikost daného území, nebo počet funkcí, jichž pro typ geometry poskytuje PostGIS mnohem více než pro typ geography \citep{OpenGeo2012}.
 
-Existuje také další nadstavba PostGIS Raster, která rozšiřuje PostgreSQL o možnost ukládání a manipulace s rastrovými daty, nadstavba PostGIS Topology pro topologickou správu vektorových dat a nadstavba pgRouting pro síťové analýzy. PostGIS je podporován velkou řadou softwarových produktů zabývajících se správou geografických dat, což také umožňuje snadnou přenositelnost a použitelnost jednotlivých nadstaveb (příklad software podporujících PostGIS: QGIS, GvSIG, GRASS, ArcGIS).
+Existuje také další nadstavba PostGIS Raster, která rozšiřuje PostgreSQL o~možnost ukládání a manipulace s rastrovými daty, nadstavba PostGIS Topology pro topologickou správu vektorových dat a nadstavba pgRouting pro síťové analýzy. PostGIS je podporován velkou řadou softwarových produktů zabývajících se správou geo\-gra\-fic\-kých dat, což také umožňuje snadnou přenositelnost a použitelnost jednotlivých nadstaveb (příklad software podporujících PostGIS: QGIS, GvSIG, GRASS, ArcGIS).
 
-PostGIS využívá mnoho běžně používaných knihoven jako GEOS (Geometry Engine Open Source) pro implementaci jednoduchých prostorových prvků a metod pro topologii, PROJ4 pro převod mezi kartografickými projekcemi nebo GDAL/OGR (Geospatial Data Abstraction Library) pro převod mezi různými vektorovými i rastrovými formáty \citep{ObeHsu2011}. Nadstavba PostGIS 1.5. obsahovala přes 800 funkcí, typů a prostorových indexů \citep{ObeHsu2012}. Aktuální verze PostGIS\footnote{aktuálně na http://postgis.refractions.net/} je 2.1.
+PostGIS využívá mnoho běžně používaných knihoven jako GEOS\footnote{Geometry Engine Open Source} pro implementaci jednoduchých prostorových prvků a metod pro topologii, PROJ4 pro převod mezi kartografickými projekcemi nebo GDAL/OGR\footnote{Geospatial Data Abstraction Library} pro převod mezi různými vektorovými i rastrovými formáty \citep{ObeHsu2011}. Nadstavba PostGIS 1.5. obsahovala přes 800 funkcí, typů a prostorových indexů \citep{ObeHsu2012}. Aktuální verze PostGIS\footnote{aktuálně na \url{http://postgis.refractions.net/}} je 2.1.
 
-Od verze ArcGIS 9.3. je PostgreSQL oficiálně podporovaným databázovým systémem pro ukládání geodat v produktech ArcGIS. Při instalaci je potřeba zajistit kompatibilitu verzí jednotlivých nástrojů, \vizTabulka{tKompatibilita}. Pro verzi ArcGIS 10.1 jsou podporované verze PostgreSQL 9.0 a PostGIS 1.5., pro ArcGIS 10.1 SP1\footnote{Service Pack 1} lze použít novější PostgreSQL 9.1 a PostGIS 2.0 \citep{OSGEO2013}\footnote{zdroj a další informace na stránkách PostgreSQL \url{http://trac.osgeo.org/postgis/wiki/UsersWikiPostgisarcgis} nebo ArcGIS Resources \url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#//015100000075000000}}. Na stránkách ArcGIS Resources\footnote{\url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#//015100000075000000}} jsou dále popsána další doporučení, například že je podporovaná pouze 64-bitová verze PostgreSQL. 
-
-Databázi PostgreSQL lze v ArcGIS produktech použít dvojím způsobem. Buď jen jako uložiště dat bez přidání geografického datového typu, nebo včetně datového typu, tedy včetně PostGIS knihovny. ArcSDE podporuje pouze datový typ PostGIS Geometry a přidává vlastní datový typ Esri St\_Geometry. Výhodou použivání Esri St\_Geometry je nezávislost na zvoleném databázovém systému, tedy snazší přenostitelnost celého řešení. 
+Od verze ArcGIS 9.3. je PostgreSQL oficiálně podporovaným databázovým systémem pro ukládání prostorových dat v produktech ArcGIS. Při instalaci je potřeba zajistit kompatibilitu verzí jednotlivých nástrojů, \vizTabulka{tKompatibilita}. Pro verzi ArcGIS 10.1 jsou podporované verze PostgreSQL 9.0 a PostGIS 1.5., pro ArcGIS 10.1 SP1\footnote{Service Pack 1} lze použít novější PostgreSQL 9.1 a PostGIS 2.0 \citep{OSGEO2013}\footnote{zdroj a další informace na stránkách PostgreSQL \url{http://trac.osgeo.org/postgis/wiki/UsersWikiPostgisarcgis} nebo ArcGIS Resources \url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#//015100000075000000}}. Na stránkách ArcGIS Resources\footnote{\url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#//015100000075000000}} jsou dále popsána další omezení a doporučení, například podporovaná verze PostgreSQL je pouze 64-bitová. 
 
         \begin{table}[H]
 \caption{Možné kombinace verzí PostgreSQL (+ PostGIS) a ArcGIS }
@@ -54,13 +52,15 @@ Databázi PostgreSQL lze v ArcGIS produktech použít dvojím způsobem. Buď je
           \end{footnotesize}
         \end{table}
 
-        \subsubsection{Microsoft SQL Server}
+Databázi PostgreSQL lze v ArcGIS produktech použít dvojím způsobem. Buď jen jako uložiště dat bez přidání geografického datového typu, nebo včetně datového typu, tedy včetně PostGIS knihovny. ArcSDE podporuje pouze datový typ PostGIS Geometry a přidává vlastní datový typ Esri St\_Geometry.
+
+        \subsubsection{MS SQL Server}
         \label{MSSQL}
 Microsoft SQL Server (dále MS SQL Server) je relační databázový systém, vyvíjený společností Microsoft, dostupný pro různé verze operačního systému Windows. Dodává se v mnoha verzích, které lze nainstalovat na různé hadrwarové platformy na základě odlišných licenčních modelů \citep{Whalen2008}. Podle Leitera (2009) MS SQL Server nabízí 8~základních verzí: Enterprise, Standard, Workgroup, Web, Express, Express Advanced Edition, Developer Edition a Compact Edition. Enterprise edition podporuje naprosto vše, co MS SQL Server nabízí, naopak verze Express, která je dostupná zdarma, obsahuje omezení některých funkcí a proto je vhodná spíše pro malé nebo začínající projekty \citep{Leiter2009}.
 
 Podpora prostorových dat je implementována jako CLR rozšíření a přidává databázovému serveru dva prostorové datové typy geometry a geography, jejichž rozdíl je podobný jako u PostgreSQL. První jmenovaný slouží k reprezentaci geografický prvků (bodů, linií, polygonů) v rovině, naproti tomu datový typ geography slouží ukládání těchto prvků na povrchu země. Oba typy pracují ve dvou dimenzích, nebere se tedy v potaz výška. Podporuje také indexování dat, které implementováno standardním B~stromem \citep{Cincura2009}. MS SQL Server podporuje OGC standardy pro prostorová data.
 
-MS SQL Server je podporován a používán ArcGIS produkty od začátku jeho vývoje\footnote{pro přehled kompatibilních verzí ArcGIS a MS SQL Server viz \url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#/Microsoft\_SQL\_Server\_Database\_Requirements/015100000070000000/}}. Verze ArcGIS Enterprise může být propojena s jakoukoliv uživatelem zvolenou a zakoupenou licencí databázového systému. Verze ArcSDE Desktop a Workgroup používají verzi Express, která je dostupná zdarma a podporuje většinu základních funkcí. Replikaci plně podporuje jen verze Enterprise, ostatní verze ji podporují pouze s omezenými funkcemi. Avšak již zmiňovaná verze Express může být použita pouze jako slave server, tedy odběratel replikovaných dat, do takovéto databáze tedy není možné přímo zapisovat \citep{Whalen2008}. Stejně jako u PostgreSQL platí, že si uživatel může zvolit, zda použije datový typ, který je součastí ArcSDE, nebo ten, který je poskytován MS SQL Serverem.
+MS SQL Server je podporován a používán ArcGIS produkty od začátku jeho vývoje\footnote{pro přehled kompatibilních verzí ArcGIS a MS SQL Server viz \url{http://resources.arcgis.com/en/help/system-requirements/10.1/index.html\#/Microsoft\_SQL\_Server\_Database\_Requirements/015100000070000000/}}. Verze ArcGIS Enterprise může být propojena s jakoukoliv uživatelem zvo\-le\-nou a zakoupenou licencí databázového systému. Verze ArcSDE Desktop a Workgroup používají verzi Express, která je dostupná zdarma a podporuje většinu základních funkcí. Replikaci plně podporuje jen verze Enterprise, ostatní verze ji podporují pouze s omezenými. Avšak již zmiňovaná verze Express může být použita pouze jako slave server, tedy odběratel replikovaných dat, do takovéto databáze tedy není možné přímo zapisovat \citep{Whalen2008}. Stejně jako u PostgreSQL platí, že si uživatel může zvolit, zda použije datový typ, který je součastí ArcSDE, nebo ten, který je poskytován MS SQL Serverem.
 
 %       \subsubsection{ArcSDE geodatabase}
 %       \label{kArcSDE}
