--- a/text/latex_text/kapitoly/uvod.tex
+++ b/text/latex_text/kapitoly/uvod.tex
@@ -1,10 +1,10 @@
-Dnešní trend je ukládat a ponechávat stále více dat pouze v digitální podobě. Mnoho dokumentů už se vůbec netiskne do papírové podoby, což podporuje i trend elektronických schránek a podpisů. S přibývajícím množstvím dat je však třeba řešit komplikace, které informace uložené pouze v elektronické podobě přinášejí. Počítačoví experti řeší například otázky, kam ukládat tak velké množství dat, jak data efektivně aktualizovat, jak zabránit poškození dat ať už způsobených lidským faktorem či chybou hardware. V případě, že se poškodí disk, můžeme často během okamžiku přijít o~všechna data, někdy však pro ztrátu dat stačí pouze stisknout tlačítko na klávesnici.
+Dnešní trend je ukládat a ponechávat stále více dat pouze v digitální podobě. Mnoho dokumentů už se vůbec netiskne do papírové podoby, což podporuje i trend e\-le\-ktro\-nic\-kých schránek a podpisů. S přibývajícím množstvím dat je však třeba řešit komplikace, které informace uložené pouze v elektronické podobě přinášejí. Počítačoví experti řeší například otázky, kam ukládat tak velké množství dat, jak data efektivně aktualizovat, jak zabránit poškození dat ať už způsobených lidským faktorem či chybou hardware. V případě, že se poškodí disk, můžeme často během okamžiku přijít o~všechna data, někdy však pro ztrátu dat stačí pouze stisknout tlačítko na klávesnici.
 
-Dnes už je běžné, že má každý hned několik internetových účtů pro příhlášení do banky, pojišťovny, různých internetových obchodů, či sociální sítě. Často však, například z důvodu přetížení, nastávají problémy s pomalým připojením nebo úplnou nedostupností zvolené služby. I to jsou problémy, které velké množství dat a vysoký počet uživatelů přináší. Jak tedy pracovat s těmito objemy, jak zabránit komplikacím, které mohou poškodit či zcela zničit celou dosavadní práci, a~jak zrychlit celý proces práce s daty? 
+Dnes je běžné, že má každý hned několik internetových účtů pro přihlášení do banky, pojišťovny, různých internetových obchodů, či sociální sítě. Často však, například z důvodu přetížení, nastávají problémy s pomalým připojením nebo úplnou nedostupností zvolené služby. I to jsou problémy, které velké množství dat a vysoký počet uživatelů přináší. Jak tedy pracovat s těmito objemy, jak zabránit komplikacím, které mohou poškodit či zcela zničit celou dosavadní práci, a~jak zrychlit celý proces práce s daty? 
 
-Řešením velkého počtu výše uvedených problémů může být ukládaní dat do databáze a jejich následná replikace. Replikací je myšlena pokročilá funkcionalita, která zajišťuje kopii dat na více serverů. Nabízí ji většina dnešních databázových serverů, zajišťuje větší robustnost databáze a vysokou dostupnost dat. Replikaci lze využít ve všech odvětvích, která pracují s daty. Výjimkou není ani geoinformatika, která často pracuje s~velkými objemy dat, které navíc nesou informaci o geografické poloze. Právě reprezentace geografické polohy, skrze textový zápis souřadnic daných bodů, může způsobit razantní zvýšení objemu dat. U webových map se musí řešit velký počet dotazů do databáze, protože například každé posunutí výřezu či přiblížení, resp. oddálení výřezu mapy, je samostatným dotazem, který musí kapacita serveru zvládat. Například pokud bude uživatel procházet plánovanou 100km trasu posouváním výřezu mapy po 10~km, může to pro server způsobit velkou zátěž.
+Řešením velkého počtu výše uvedených problémů může být ukládaní dat do databáze a jejich následná replikace. Replikací je myšlena pokročilá funkcionalita, která zajišťuje kopii dat na více serverů. Nabízí ji většina dnešních databázových serverů, zajišťuje větší robustnost databáze a vysokou dostupnost dat. Replikaci lze využít ve všech odvětvích, která pracují s daty. Výjimkou není ani geoinformatika, která často pracuje s~velkými objemy dat, které nesou informaci o geografické poloze. Právě reprezentace geografické polohy, skrze textový zápis souřadnic daných bodů, může způsobit razantní zvýšení objemu dat. U webových map se musí řešit velký počet dotazů do databáze, protože například každé posunutí výřezu či přiblížení, resp. oddálení výřezu mapy, je samostatným dotazem, který musí kapacita serveru zvládat. Například pokud bude uživatel procházet plánovanou 100km trasu posouváním výřezu mapy po 10~km, může to serveru způsobit velkou zátěž.
 
-Data středně velkého až velkého projektu je vhodnější ukládat do databáze než jiných formátů typu shapefile, Microsoft Access nebo obyčejného tabulkového procesoru. Nabízí nám to sofistikované uložení dat, propojení jednotlivých vrstev a připojení atributů ke geometrii, snadnou přenostitelnost dat i efektivní vyhledávání. Replikace samotná se poté využívá pro zajištění kopie dat a následnou aktualizaci změn, která v databázi nastanou. 
+Data středně velkého až velkého projektu je vhodnější ukládat do databáze než jiných formátů typu shapefile, GML nebo obyčejného tabulkového procesoru. Nabízí nám to sofistikované uložení dat, propojení jednotlivých vrstev a připojení atributů ke geometrii, snadnou přenostitelnost dat i efektivní vyhledávání. Replikace samotná se poté využívá pro zajištění kopie dat a následnou aktualizaci změn, která v databázi nastanou. 
 
-Replikaci ocení uživatelé pracující na společném projektu, distribuovaná pracoviště i společnosti s velkým množstvím důležitých dat, jejichž dostupnost je rozhodující pro jejich fungování. Dobrým příkladem využitelnosti replikace je také nový trend využívání offline aplikací v mobilních telefonech. Databáze se vždy replikuje do mobilního telefonu, kde může fungovat offline a vždy, když se klient připojí na internetovou síť, aplikace zkontroluje zda není na serveru novější verze databáze a pokud ano, zkopíruje pouze změny, které proběhly od poslední aktualizace. Databázové systémy nabízí širokou škálu nastavení, která umožňuje replikaci přizpůsobit danému řešení.
+Replikaci ocení uživatelé pracující na společném projektu, distribuovaná pra\-co\-viš\-tě i společnosti s velkým množstvím důležitých dat, jejichž dostupnost je rozhodující pro jejich fungování. Dobrým příkladem využitelnosti replikace a synchronizace je také nový trend využívání offline aplikací v mobilních telefonech. Databáze se vždy replikuje do mobilního telefonu, kde může fungovat offline a vždy, když se klient připojí na internetovou síť, aplikace zkontroluje zda není na serveru novější verze databáze a pokud ano, zkopíruje pouze změny, které proběhly od poslední aktualizace. Databázové systémy nabízí širokou škálu nastavení, která umožňuje replikaci přizpůsobit danému řešení.
 
